src/compiler/compiler/antlr/DParser.java
// Generated from /home/ilya/Documents/Compilers/Compiler project/src/grammar/D.g4 by ANTLR 4.7
package compiler.antlr;

import org.runtime.atn.*;
import org.runtime.dfa.DFA;
import org.runtime.*;
import org.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
            T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, INTEGER = 45,
            REAL = 46, STRING = 47, BOOLEAN = 48, EMPTY = 49, IDENT = 50, WS = 51;
    public static final int
            RULE_compilation_unit = 0, RULE_program = 1, RULE_scope = 2, RULE_statement = 3,
            RULE_r_if = 4, RULE_r_while = 5, RULE_r_for = 6, RULE_print = 7, RULE_r_return = 8,
            RULE_assignment = 9, RULE_declaration = 10, RULE_var_definition = 11,
            RULE_reference = 12, RULE_expression = 13, RULE_relation = 14, RULE_simple = 15,
            RULE_summand = 16, RULE_factor = 17, RULE_primary = 18, RULE_function_literal = 19,
            RULE_body = 20, RULE_type_indicator = 21, RULE_literal = 22, RULE_object = 23,
            RULE_tuple = 24;
    public static final String[] ruleNames = {
            "compilation_unit", "program", "scope", "statement", "r_if", "r_while",
            "r_for", "print", "r_return", "assignment", "declaration", "var_definition",
            "reference", "expression", "relation", "simple", "summand", "factor",
            "primary", "function_literal", "body", "type_indicator", "literal", "object",
            "tuple"
    };

    private static final String[] _LITERAL_NAMES = {
            null, "';'", "'if'", "'then'", "'else'", "'end'", "'while'", "'loop'",
            "'for'", "'in'", "'..'", "'print'", "','", "'return'", "':='", "'var'",
            "'['", "']'", "'('", "')'", "'.'", "'or'", "'and'", "'xor'", "'<'", "'<='",
            "'>'", "'>='", "'='", "'/='", "'+'", "'-'", "'*'", "'/'", "'is'", "'not'",
            "'size'", "'func'", "'=>'", "'int'", "'real'", "'bool'", "'string'", "'{'",
            "'}'", null, null, null, null, "'empty'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, "INTEGER", "REAL",
            "STRING", "BOOLEAN", "EMPTY", "IDENT", "WS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "D.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public DParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }
    public static class Compilation_unitContext extends ParserRuleContext {
        public ProgramContext program() {
            return getRuleContext(ProgramContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(DParser.EOF, 0);
        }
        public Compilation_unitContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_compilation_unit;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterCompilation_unit(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitCompilation_unit(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitCompilation_unit(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Compilation_unitContext compilation_unit() throws RecognitionException {
        Compilation_unitContext _localctx = new Compilation_unitContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_compilation_unit);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(50);
                program();
                setState(51);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ProgramContext extends ParserRuleContext {
        public ScopeContext scope() {
            return getRuleContext(ScopeContext.class, 0);
        }
        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterProgram(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitProgram(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitProgram(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_program);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(53);
                scope();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ScopeContext extends ParserRuleContext {
        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }
        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }
        public ScopeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_scope;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterScope(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitScope(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitScope(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ScopeContext scope() throws RecognitionException {
        ScopeContext _localctx = new ScopeContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_scope);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(61);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__5) | (1L << T__7) | (1L << T__10) | (1L << T__12) | (1L << T__14) | (1L << IDENT))) != 0)) {
                    {
                        {
                            setState(55);
                            statement();
                            setState(57);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            if (_la == T__0) {
                                {
                                    setState(56);
                                    match(T__0);
                                }
                            }

                        }
                    }
                    setState(63);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StatementContext extends ParserRuleContext {
        public DeclarationContext declaration() {
            return getRuleContext(DeclarationContext.class, 0);
        }
        public AssignmentContext assignment() {
            return getRuleContext(AssignmentContext.class, 0);
        }
        public R_ifContext r_if() {
            return getRuleContext(R_ifContext.class, 0);
        }
        public R_whileContext r_while() {
            return getRuleContext(R_whileContext.class, 0);
        }
        public R_forContext r_for() {
            return getRuleContext(R_forContext.class, 0);
        }
        public R_returnContext r_return() {
            return getRuleContext(R_returnContext.class, 0);
        }
        public PrintContext print() {
            return getRuleContext(PrintContext.class, 0);
        }
        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterStatement(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitStatement(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_statement);
        try {
            setState(71);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__14:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(64);
                    declaration();
                }
                break;
                case IDENT:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(65);
                    assignment();
                }
                break;
                case T__1:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(66);
                    r_if();
                }
                break;
                case T__5:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(67);
                    r_while();
                }
                break;
                case T__7:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(68);
                    r_for();
                }
                break;
                case T__12:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(69);
                    r_return();
                }
                break;
                case T__10:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(70);
                    print();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class R_ifContext extends ParserRuleContext {
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }
        public List<ScopeContext> scope() {
            return getRuleContexts(ScopeContext.class);
        }
        public ScopeContext scope(int i) {
            return getRuleContext(ScopeContext.class, i);
        }
        public R_ifContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_r_if;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterR_if(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitR_if(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitR_if(this);
            else return visitor.visitChildren(this);
        }
    }

    public final R_ifContext r_if() throws RecognitionException {
        R_ifContext _localctx = new R_ifContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_r_if);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(73);
                match(T__1);
                setState(74);
                expression();
                setState(75);
                match(T__2);
                setState(76);
                scope();
                setState(79);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__3) {
                    {
                        setState(77);
                        match(T__3);
                        setState(78);
                        scope();
                    }
                }

                setState(81);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class R_whileContext extends ParserRuleContext {
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }
        public ScopeContext scope() {
            return getRuleContext(ScopeContext.class, 0);
        }
        public R_whileContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_r_while;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterR_while(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitR_while(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitR_while(this);
            else return visitor.visitChildren(this);
        }
    }

    public final R_whileContext r_while() throws RecognitionException {
        R_whileContext _localctx = new R_whileContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_r_while);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(83);
                match(T__5);
                setState(84);
                expression();
                setState(85);
                match(T__6);
                setState(86);
                scope();
                setState(87);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class R_forContext extends ParserRuleContext {
        public ScopeContext scope() {
            return getRuleContext(ScopeContext.class, 0);
        }

        public TerminalNode IDENT() {
            return getToken(DParser.IDENT, 0);
        }
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }
        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }
        public R_forContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_r_for;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterR_for(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitR_for(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitR_for(this);
            else return visitor.visitChildren(this);
        }
    }

    public final R_forContext r_for() throws RecognitionException {
        R_forContext _localctx = new R_forContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_r_for);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(89);
                match(T__7);
                setState(92);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                    case 1: {
                        setState(90);
                        match(IDENT);
                        setState(91);
                        match(T__8);
                    }
                    break;
                }
                setState(98);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__15) | (1L << T__17) | (1L << T__29) | (1L << T__30) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__42) | (1L << INTEGER) | (1L << REAL) | (1L << STRING) | (1L << BOOLEAN) | (1L << EMPTY) | (1L << IDENT))) != 0)) {
                    {
                        setState(94);
                        expression();
                        setState(95);
                        match(T__9);
                        setState(96);
                        expression();
                    }
                }

                setState(100);
                match(T__6);
                setState(101);
                scope();
                setState(102);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PrintContext extends ParserRuleContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }
        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }
        public PrintContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_print;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterPrint(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitPrint(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitPrint(this);
            else return visitor.visitChildren(this);
        }
    }

    public final PrintContext print() throws RecognitionException {
        PrintContext _localctx = new PrintContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_print);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(104);
                match(T__10);
                setState(105);
                expression();
                setState(110);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__11) {
                    {
                        {
                            setState(106);
                            match(T__11);
                            setState(107);
                            expression();
                        }
                    }
                    setState(112);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class R_returnContext extends ParserRuleContext {
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }
        public R_returnContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_r_return;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterR_return(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitR_return(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitR_return(this);
            else return visitor.visitChildren(this);
        }
    }

    public final R_returnContext r_return() throws RecognitionException {
        R_returnContext _localctx = new R_returnContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_r_return);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(113);
                match(T__12);
                setState(115);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                    case 1: {
                        setState(114);
                        expression();
                    }
                    break;
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AssignmentContext extends ParserRuleContext {
        public ReferenceContext reference() {
            return getRuleContext(ReferenceContext.class, 0);
        }
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }
        public AssignmentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assignment;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterAssignment(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitAssignment(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitAssignment(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AssignmentContext assignment() throws RecognitionException {
        AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_assignment);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(117);
                reference(0);
                setState(118);
                match(T__13);
                setState(119);
                expression();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DeclarationContext extends ParserRuleContext {
        public List<Var_definitionContext> var_definition() {
            return getRuleContexts(Var_definitionContext.class);
        }
        public Var_definitionContext var_definition(int i) {
            return getRuleContext(Var_definitionContext.class, i);
        }
        public DeclarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_declaration;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterDeclaration(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitDeclaration(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitDeclaration(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DeclarationContext declaration() throws RecognitionException {
        DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_declaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(121);
                match(T__14);
                setState(122);
                var_definition();
                setState(127);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__11) {
                    {
                        {
                            setState(123);
                            match(T__11);
                            setState(124);
                            var_definition();
                        }
                    }
                    setState(129);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Var_definitionContext extends ParserRuleContext {
        public TerminalNode IDENT() {
            return getToken(DParser.IDENT, 0);
        }
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }
        public Var_definitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_var_definition;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterVar_definition(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitVar_definition(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitVar_definition(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Var_definitionContext var_definition() throws RecognitionException {
        Var_definitionContext _localctx = new Var_definitionContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_var_definition);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(130);
                match(IDENT);
                setState(133);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__13) {
                    {
                        setState(131);
                        match(T__13);
                        setState(132);
                        expression();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ReferenceContext extends ParserRuleContext {
        public TerminalNode IDENT() {
            return getToken(DParser.IDENT, 0);
        }
        public ReferenceContext reference() {
            return getRuleContext(ReferenceContext.class, 0);
        }
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }
        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }
        public ReferenceContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_reference;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterReference(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitReference(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitReference(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ReferenceContext reference() throws RecognitionException {
        return reference(0);
    }

    private ReferenceContext reference(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ReferenceContext _localctx = new ReferenceContext(_ctx, _parentState);
        ReferenceContext _prevctx = _localctx;
        int _startState = 24;
        enterRecursionRule(_localctx, 24, RULE_reference, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(136);
                    match(IDENT);
                }
                _ctx.stop = _input.LT(-1);
                setState(160);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                while (_alt != 2 && _alt != org.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(158);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
                                case 1: {
                                    _localctx = new ReferenceContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_reference);
                                    setState(138);
                                    if (!(precpred(_ctx, 3)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                    setState(139);
                                    match(T__15);
                                    setState(140);
                                    expression();
                                    setState(141);
                                    match(T__16);
                                }
                                break;
                                case 2: {
                                    _localctx = new ReferenceContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_reference);
                                    setState(143);
                                    if (!(precpred(_ctx, 2)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(144);
                                    match(T__17);
                                    setState(145);
                                    expression();
                                    setState(150);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                    while (_la == T__11) {
                                        {
                                            {
                                                setState(146);
                                                match(T__11);
                                                setState(147);
                                                expression();
                                            }
                                        }
                                        setState(152);
                                        _errHandler.sync(this);
                                        _la = _input.LA(1);
                                    }
                                    setState(153);
                                    match(T__18);
                                }
                                break;
                                case 3: {
                                    _localctx = new ReferenceContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_reference);
                                    setState(155);
                                    if (!(precpred(_ctx, 1)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                    setState(156);
                                    match(T__19);
                                    setState(157);
                                    match(IDENT);
                                }
                                break;
                            }
                        }
                    }
                    setState(162);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class ExpressionContext extends ParserRuleContext {
        public List<RelationContext> relation() {
            return getRuleContexts(RelationContext.class);
        }
        public RelationContext relation(int i) {
            return getRuleContext(RelationContext.class, i);
        }
        public ExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expression;
        }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).enterExpression(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DListener) ((DListener) listener).exitExpression(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DVisitor) return ((DVisitor<? extends T>) visitor).visitExpression(this);
            else return visitor.visitChildren(this);
        }
    }
